<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/eTN1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="87dp"
        android:layout_marginRight="87dp"
        android:ems="10"
        android:hint="@string/ingrese_el_primer_operador"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/eTN2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="87dp"
        android:layout_marginRight="87dp"
        android:ems="10"
        android:hint="@string/ingrese_el_segundo_operador"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTN1"
        android:autofillHints="" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="87dp"
        android:layout_marginRight="87dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rBSuma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suma" />

        <RadioButton
            android:id="@+id/rBResta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resta" />

        <RadioButton
            android:id="@+id/rBMultiplicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiplicacion" />

        <RadioButton
            android:id="@+id/rBDivision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/division" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCalcular"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="100dp"

        android:ellipsize="none"
        android:text="@string/calcular"
        android:textColor="@android:color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>